deleted label and fixed positioning of input, also added style to the dropdown menu to not be transparent to allow for easier overlap, and I also added a visual aspect so that as you are typing, the letter that you have already typed are much larger and bold than the letters that have not yet been typed yet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,35 @@ h1.text-center{
     -moz-background-size: cover;
     -webkit-background-size: cover;
 } */
+
+/* .label{
+    display: block;
+    text-align: center;
+    line-height: 150%;
+    font-size: 1.15em;
+    position: absolute;
+} */
+
+.drinkInput{
+    margin-left:9%;
+    position: absolute;
+}
+
+.tt-menu { /*THIS IS THE CLASS FOR THE DROPDOWN MENU OF SUGGESTIONS*/
+    width: 222px;
+    margin-top: 12px;
+    /* CHANGE MARGIN TO MOVE MENU */
+    margin-left:9%;
+    padding: 8px 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion { /*THIS IS THE CLASS FOR INDIVIDUAL SUGGESTIONS*/
+    padding: 3px 20px;
+    font-size: 12px;
+    line-height: 24px;
+}
